<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, startApp</string>
    <string name="app_name">labs</string>
    <string name="friend_list">Friend List</string>
    
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">LOGIN</string>
    <string name="reset">RESET</string>
    <string name="remember_me">Remember me</string>
    <string name="messaging">Messaging</string>
    <string name="local_service_started">App service started</string>
    <string name="local_service_stopped">App service stopped</string>
	<string name="local_service_connected">local_service_connected</string>
	<string name="OK">OK</string>
	<string name="not_connected_to_service">Not connected to the service and 
	this is not supposed to happend so please inform this situation to 
	ahmetmermerkaya@hotmail.com</string>	
	<string name="fill_both_username_and_password">Please fill all the fields</string>
	<string name="make_sure_username_and_password_correct">Please make sure that
	your username and password correct</string>
	<string name="user_offline">This user is offline</string>
	<string name="sign_up">SIGN UP</string>
	<string name="exit_application">Log Out</string>
	<string name="password_again">Confirm Password:</string>
	<string name="email">E-mail:</string>
	<string name="register">Register/SignUp</string>
	<string name="stranger">STRANGER\'s LOGIN</string>
	<string name="stranger_name">Name to Strangers:</string>
	<string name="signup_fill_all_fields">Please fill all fields</string>
	<string name="signup_type_same_password_in_password_fields">Type same password in password fields</string>
	<string name="signup_failed">Sign up failed because of unknown reason</string>
	<string name="signup_username_crashed">Your username have been already taken, please try another username</string>
	<string name="signup_strangername_crashed">Your strangername have been already taken, please try another strangername</string>
	<string name="signup_successfull">Your registration is completed successfully,\n you can login now </string>
	<string name="username_and_password_length_short">Username and password length must be at least 5</string>
	<string name="add_new_friend">Add new friend</string>
	<string name="delete_friend">Delete friend</string>
	<string name="no_friend">You have no friend,\n you can add new friends by menu</string>
	<string name="no_stranger">Currently no stranger is online,\n you can talk to your friends by menu</string>
	<string name="add">ADD</string>
	<string name="request_sent">Your request has been sent, if username exists</string>
	<string name="delete_request_sent">Friend deleted</string>
	<string name="request_notsent">Your request has not been sent, check the username</string>
	<string name="type_friend_username">Please type your friend username</string>
	<string name="new_friend_request_exist">New friend request</string>
	<string name="approve_selected_friends">Approve Selecteds and Discard Others</string>
	<string name="not_connected_to_network">There is no available connected network</string>
	<string name="message_cannot_be_sent">Message was not been able to sent</string>
	<string name="see_friend_list">Friends</string>
	<string name="see_stranger_list">Strangers</string>
	<string name="change_stranger_name">Change stranger name</string>
	<string name="desired_stranger_name">Your Display Name</string>
	<string name="delete">DELETE</string>
	<string name="manage_friend">Manage Friend List</string>
	<string name="refresh_friend_list">REFRESH</string>
	<string name="refresh_stranger_list">REFRESH</string>
	<string name="unApprovedFriendList">Unapproved Friend List</string>
	<string name="delete_message">Do you want to delete the message?</string>
	
	<string name="fill_username_and_password_and_stranger">Fill username, password and display name</string>
	
	<string name="exit_stranger">Exit</string>


</resources>
