<?xml version="1.0" encoding="UTF-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent">

<LinearLayout  
	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:gravity="center"
            android:weightSum="1.0">
    
		    <TextView 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/username"
		        android:textSize="15dp"
		        android:layout_weight="0.5"
		    />
		    
		    <EditText android:id="@+id/userName"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:clickable="true"
		        android:singleLine="true"
		        android:password="false"
		        android:layout_weight="0.5"
		    />
	    
	    </LinearLayout>
	    
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:gravity="center"
            android:weightSum="1.0"
            >
	    
		    <TextView 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/password"
		        android:textSize="15dp"
		        android:layout_weight="0.5"
		    />
		    
		    <EditText android:id="@+id/password"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:clickable="true"
		        android:singleLine="true"
		        android:password="true"
		    /> 
	    
		 </LinearLayout>
		 
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:gravity="center"
            android:weightSum="1.0">
		    
		     <TextView 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textSize="15dp"
		        android:layout_weight="0.5"
		        android:text="@string/password_again"
		    />
		    
		    <EditText android:id="@+id/passwordAgain"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:clickable="true"
		        android:singleLine="true"
		        android:password="true"
		    />
		    
		 </LinearLayout>
		 
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:gravity="center"
            android:weightSum="1.0">
		    
		    <TextView 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textSize="15dp"
		        android:layout_weight="0.5"
		        android:text="@string/email"
		    />
		    
		    <EditText android:id="@+id/email"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:clickable="true"
		        android:singleLine="true"
		        android:password="false"
		    />
		    
		</LinearLayout>
		
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:gravity="center"
            android:weightSum="1.0">
		    
		    <TextView 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textSize="15dp"
		        android:layout_weight="0.5"
		        android:text="@string/stranger_name"
		    />
		    
		    <EditText android:id="@+id/strangerName"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:clickable="true"
		        android:singleLine="true"
		        android:password="false"
		    />
		    
		</LinearLayout>
    
    </LinearLayout>
    
    <LinearLayout
        android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:weightSum="1.0"
    	android:paddingTop="10dp">
			  
	    <Button android:id="@+id/signUp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/sign_up"
	        android:layout_weight="0.5"/>
	    
	    <Button
	        android:id="@+id/cancel_signUp"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/reset"
	    	android:layout_weight="0.5"/>
	    
	</LinearLayout>

</LinearLayout>
</ScrollView>



