<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">

<!--  LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"-->
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="1.0"
        android:gravity="center"
        android:layout_weight="1.0"
        android:padding="20dp"
        android:layout_gravity="center">
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.15"
            android:weightSum="1.0">
        
            	<TextView 
        	    android:layout_width="fill_parent"
        	    android:layout_height="wrap_content"
        	    android:text="@string/username"
        	    android:gravity="center_vertical"
        	    android:textSize="15dp"
        	    android:layout_weight="0.5"/>
            	
            	<EditText 
            	    android:layout_width="fill_parent"
            	    android:layout_height="wrap_content"
            	    android:hint="Username"
            	    android:id="@+id/userName"
            	    android:layout_weight="0.5"
            	    android:singleLine="true"/>
        	
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.15"
            android:weightSum="1.0">
        
            	<TextView 
        	    android:layout_width="fill_parent"
        	    android:layout_height="wrap_content"
        	    android:text="@string/password"
        	    android:gravity="center_vertical"
        	    android:textSize="15dp"
        	    android:layout_weight="0.5"/>
            	
            	<EditText 
            	    android:layout_width="fill_parent"
            	    android:layout_height="wrap_content"
            	    android:hint="Password"
            	    android:id="@+id/password"
            	    android:password="true"
            	    android:layout_weight="0.5"
            	    android:singleLine="true"/>
        	
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.05"
            android:gravity="center">
            
            <CheckBox 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rem"
                android:checked="true"/>
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="left|center_vertical"
                android:textSize="20dp"
                android:text="@string/remember_me"/>
            
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.2"
            android:gravity="center">
        
            	<Button 
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:text="@string/login"
        	    android:layout_gravity="center"
        	    android:id="@+id/login"
        	    android:layout_weight="3"/>
        	
            	<Button 
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:text="@string/reset"
        	    android:layout_gravity="center"
        	    android:id="@+id/cancel_login"
        	    android:layout_weight="3"/>
            	
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.15"
            android:weightSum="1.0">
        
            	<TextView 
        	    android:layout_width="fill_parent"
        	    android:layout_height="wrap_content"
        	    android:text="@string/desired_stranger_name"
        	    android:gravity="center_vertical"
        	    android:textSize="15dp"
        	    android:layout_weight="0.5"/>
            	
            	<EditText 
            	    android:layout_width="fill_parent"
            	    android:layout_height="wrap_content"
            	    android:hint="Display Name"
            	    android:id="@+id/display_name"
            	    android:layout_weight="0.5"
            	    android:singleLine="true"/>
        	
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.2"
            android:paddingTop="10dp">
            
            <Button
        		android:id="@+id/random"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:text="@string/stranger"/>
                
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.1">
            
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/register"
                android:gravity="center"
                android:textSize="15dp"
                android:id="@+id/register_me"/>
                
        </LinearLayout>
        
    <!--  /LinearLayout-->

</LinearLayout>

</ScrollView>