<?xml version="1.0" encoding="UTF-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<LinearLayout 
	android:layout_width = "fill_parent"
   	android:layout_height = "fill_parent"
   	android:orientation = "vertical"
   	android:padding="20dp"
   	android:weightSum="1.0">
   	
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.5">
        
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="ADD FRIEND"
            android:textSize="20dp"
            android:padding="10dip"/>

	   <TextView 	
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:padding="10dip"
	        android:text="Friend's Username:"
	        android:textSize="15dp"/>
	    
	    <EditText android:id="@+id/newFriendUsername"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:clickable="true"
	        android:singleLine="true"
	        android:password="false"
	        android:padding="10dip"
	        android:hint="Friend's Username"/>  	
	    
	   <LinearLayout 
	       	android:orientation="horizontal"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:weightSum="1.0"
	    	android:paddingTop="10dp">
		 
		 <Button android:id="@+id/addFriend"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/add"
	        android:layout_weight="0.5"/>
		 
	    <Button android:id="@+id/cancel1"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/reset"
	    	android:layout_weight="0.5"/>
	    
		</LinearLayout>
   
   </LinearLayout>
   
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.5">
        
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="DELETE FRIEND"
            android:textSize="20dp"
            android:padding="10dip"/>

	   <TextView 	
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:padding="10dip"
	        android:text="Friend's Username:"
	        android:textSize="15dp"/>
	    
	    <EditText android:id="@+id/deleteFriendUsername"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:clickable="true"
	        android:singleLine="true"
	        android:password="false"
	        android:padding="10dip"
	        android:hint="Friend's Username"/>  	
	    
	   <LinearLayout 
	       	android:orientation="horizontal"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:weightSum="1.0"
	    	android:paddingTop="10dp">
		 
		 <Button android:id="@+id/deleteFriend"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/delete"
	        android:layout_weight="0.5"/>
		 
	    <Button android:id="@+id/cancel2"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/reset"
	    	android:layout_weight="0.5"/>
	    
		</LinearLayout>
   
   </LinearLayout>
   			  
</LinearLayout>

</ScrollView>